--- a/Framework/BuildingBlocks.Tests/01.BuildingBlocks.Tests.csproj
+++ b/Framework/BuildingBlocks.Tests/01.BuildingBlocks.Tests.csproj
@@ -87,12 +87,12 @@
     <Compile Include="Messaging\EmptyMessage.cs" />
     <Compile Include="Messaging\RequiredValueMessage.T1.cs" />
     <Compile Include="StringTemplateTest.cs" />
-    <Compile Include="Constraints\CollectionConstraintsTest.cs" />
+    <Compile Include="Constraints\CollectionConstraintsTest.Collection.cs" />
     <Compile Include="Constraints\ComparerStub.T1.cs" />
-    <Compile Include="Constraints\EnumerableConstraintsTest.cs" />
+    <Compile Include="Constraints\CollectionConstraintsTest.Enumerable.cs" />
     <Compile Include="Constraints\EqualityComparerStub.T1.cs" />
     <Compile Include="Constraints\GuidConstraintsTest.cs" />
-    <Compile Include="Constraints\ListConstraintTest.cs" />
+    <Compile Include="Constraints\CollectionConstraintsTest.List.cs" />
     <Compile Include="Constraints\NullableConstraintsTest.cs" />
     <Compile Include="Constraints\BasicConstraintsTest.cs" />
     <Compile Include="Constraints\RangeTest.cs" />
