--- a/Framework/BuildingBlocks.Tests/01.BuildingBlocks.Tests.csproj
+++ b/Framework/BuildingBlocks.Tests/01.BuildingBlocks.Tests.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Constraints\BasicConstraintsTest.IsSameInstanceAs.cs" />
     <Compile Include="Constraints\BasicConstraintsTest.IsSmallerThan.cs" />
     <Compile Include="Constraints\BooleanConstraintsTest.cs" />
+    <Compile Include="Constraints\CollectionConstraintsTest.Dictionary.cs" />
     <Compile Include="Constraints\CompositeConstraintTest.cs" />
     <Compile Include="Constraints\ConstraintInverterTest.cs" />
     <Compile Include="Constraints\ConstraintTest.cs" />
