--- a/Framework/BuildingBlocks/02.BuildingBlocks.csproj
+++ b/Framework/BuildingBlocks/02.BuildingBlocks.csproj
@@ -52,19 +52,25 @@
     <Compile Include="Clocks\ClockScope.cs" />
     <Compile Include="Clocks\ClockWithOffset.cs" />
     <Compile Include="Constraints\BasicConstraints.cs" />
+    <Compile Include="Constraints\CollectionConstraints.Array.cs" />
     <Compile Include="Constraints\CollectionConstraints.cs" />
     <Compile Include="Constraints\CollectionConstraints.Enumerable.cs" />
     <Compile Include="Constraints\CollectionConstraints.Dictionary.cs" />
     <Compile Include="Constraints\CollectionConstraints.List.cs" />
     <Compile Include="Constraints\ConstraintWrapper.T1.cs" />
     <Compile Include="Constraints\DelegateConstraint.T1.cs" />
+    <Compile Include="Constraints\DelegateConstraint.T2.cs" />
     <Compile Include="Constraints\EquatableObject.T1.cs" />
+    <Compile Include="Constraints\IMemberTransformation.cs" />
     <Compile Include="Constraints\Member.cs" />
     <Compile Include="Constraints\MemberByTransformation.cs" />
     <Compile Include="Constraints\MemberConstraint.T2.cs" />
+    <Compile Include="Constraints\MemberNameTransformation.cs" />
+    <Compile Include="Constraints\MemberSelectionTransformation.cs" />
     <Compile Include="Constraints\ReadOnlyCollection.T1.cs" />
     <Compile Include="Constraints\ReadOnlyList.T1.cs" />
     <Compile Include="Constraints\StringConstraints.IsIdentifier.cs" />
+    <Compile Include="Constraints\StringConstraints.Length.cs" />
     <Compile Include="Identifier.cs" />
     <Compile Include="Messaging\CommandExecutionException.cs" />
     <Compile Include="Constraints\AndConstraint.T1.cs" />
