--- a/Framework/BuildingBlocks.Tests/01.BuildingBlocks.Tests.csproj
+++ b/Framework/BuildingBlocks.Tests/01.BuildingBlocks.Tests.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Constraints\StringConstraintsTest.Matches.cs" />
     <Compile Include="Constraints\StringConstraintsTest.StartsWith.cs" />
     <Compile Include="Messaging\EmptyMessage.cs" />
+    <Compile Include="Messaging\MessageTest.cs" />
     <Compile Include="Messaging\RequiredValueMessage.T1.cs" />
     <Compile Include="StringTemplateTest.cs" />
     <Compile Include="Constraints\CollectionConstraintsTest.Collection.cs" />
