--- a/Framework/BuildingBlocks/02.BuildingBlocks.csproj
+++ b/Framework/BuildingBlocks/02.BuildingBlocks.csproj
@@ -73,8 +73,8 @@
     <Compile Include="Constraints\MemberConstraint.T2.cs" />
     <Compile Include="Constraints\MemberNameTransformation.cs" />
     <Compile Include="Constraints\MemberSelectionTransformation.cs" />
-    <Compile Include="Constraints\ReadOnlyCollection.T1.cs" />
-    <Compile Include="Constraints\ReadOnlyList.T1.cs" />
+    <Compile Include="ReadOnlyCollection.T1.cs" />
+    <Compile Include="ReadOnlyList.T1.cs" />
     <Compile Include="Constraints\StringConstraints.IsIdentifier.cs" />
     <Compile Include="Constraints\StringConstraints.Length.cs" />
     <Compile Include="EnumOperators.T1.cs" />
@@ -118,11 +118,11 @@
     <Compile Include="Constraints\StringConstraints.IsNullOrWhiteSpace.cs" />
     <Compile Include="Constraints\StringConstraints.Matches.cs" />
     <Compile Include="Constraints\StringConstraints.StartsWith.cs" />
-    <Compile Include="Messaging\IValidateable.cs" />
-    <Compile Include="Messaging\MessageErrorInfoBuilder.cs" />
+    <Compile Include="IValidateable.cs" />
+    <Compile Include="ErrorInfoBuilder.cs" />
     <Compile Include="Messaging\FunctionalException.cs" />
     <Compile Include="Messaging\InvalidMessageException.cs" />
-    <Compile Include="Messaging\AuthorizationFailedException.cs" />
+    <Compile Include="Messaging\AuthorizationException.cs" />
     <Compile Include="Resources\ErrorMessages.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -137,7 +137,7 @@
     <Compile Include="Constraints\BasicConstraints.IsInRange.cs" />
     <Compile Include="Constraints\BooleanConstraints.cs" />
     <Compile Include="Constraints\CollectionConstraints.Collection.cs" />
-    <Compile Include="Messaging\ConstraintValidator.T1.cs" />
+    <Compile Include="Constraints\ConstraintValidator.T1.cs" />
     <Compile Include="Constraints\GuidConstraints.cs" />
     <Compile Include="Constraints\IMemberConstraintSet.T1.cs" />
     <Compile Include="Constraints\IMember.cs" />
@@ -147,11 +147,11 @@
     <Compile Include="Constraints\StringConstraints.IsNumber.cs" />
     <Compile Include="Messaging\IMessage.cs" />
     <Compile Include="Messaging\IMessage.T1.cs" />
-    <Compile Include="Messaging\IMessageValidator.T1.cs" />
+    <Compile Include="IValidator.T1.cs" />
     <Compile Include="Messaging\Message.cs" />
     <Compile Include="Messaging\Message.T1.cs" />
-    <Compile Include="Messaging\MessageValidator.T1.cs" />
-    <Compile Include="Messaging\MessageErrorInfo.cs" />
+    <Compile Include="Validator.T1.cs" />
+    <Compile Include="ErrorInfo.cs" />
     <Compile Include="Clocks\HighResolutionClock.cs" />
     <Compile Include="Clocks\StopwatchClock.cs" />
     <Compile Include="Constraints\EquatableValue.T1.cs" />
