--- a/Framework/BuildingBlocks/02.BuildingBlocks.csproj
+++ b/Framework/BuildingBlocks/02.BuildingBlocks.csproj
@@ -52,24 +52,34 @@
     <Compile Include="Clocks\ClockExtensions.cs" />
     <Compile Include="Clocks\ClockScope.cs" />
     <Compile Include="Clocks\ShiftedClock.cs" />
+    <Compile Include="Constraints\AndMemberConstraint.T3.cs" />
     <Compile Include="Constraints\BasicConstraints.cs" />
-    <Compile Include="Constraints\CollectionConstraints.NullOrEmpty.cs" />
-    <Compile Include="Constraints\CollectionConstraints.ElementAt.cs" />
+    <Compile Include="Constraints\CollectionConstraints.IsNullOrEmpty.cs" />
+    <Compile Include="Constraints\CollectionConstraints.HasItem.cs" />
     <Compile Include="Constraints\ConstraintVisitor.cs" />
     <Compile Include="Constraints\ConstraintWrapper.T1.cs" />
     <Compile Include="Constraints\DefaultMember.cs" />
     <Compile Include="Constraints\DelegateConstraint.T1.cs" />
     <Compile Include="Constraints\DelegateFilter.T2.cs" />
+    <Compile Include="Constraints\EmptyStack.cs" />
     <Compile Include="Constraints\EnumConstraints.cs" />
     <Compile Include="Constraints\EquatableObject.T1.cs" />
     <Compile Include="Constraints\IConstraint.cs" />
     <Compile Include="Constraints\IConstraintVisitor.cs" />
-    <Compile Include="Constraints\IMemberTransformation.cs" />
+    <Compile Include="Constraints\IdentifierComponent.cs" />
+    <Compile Include="Constraints\IMemberConstraint.T2.cs" />
+    <Compile Include="Constraints\IndexList.cs" />
+    <Compile Include="Constraints\IndexListComponent.cs" />
     <Compile Include="Constraints\Member.cs" />
-    <Compile Include="Constraints\MemberByTransformation.cs" />
+    <Compile Include="Constraints\Member.T1.cs" />
     <Compile Include="Constraints\MemberConstraint.T2.cs" />
-    <Compile Include="Constraints\MemberNameTransformation.cs" />
-    <Compile Include="Constraints\MemberSelectionTransformation.cs" />
+    <Compile Include="Constraints\MemberConstraintExpression.T2.cs" />
+    <Compile Include="Constraints\MemberExceptionFactory.cs" />
+    <Compile Include="Constraints\MemberExpressionPair.cs" />
+    <Compile Include="Constraints\MemberNameComponentStack.cs" />
+    <Compile Include="Constraints\MemberTransformer.cs" />
+    <Compile Include="Constraints\PushIdentifierTransformer.cs" />
+    <Compile Include="Constraints\PushIndexListTransformer.cs" />
     <Compile Include="Constraints\StringConstraints.IsIdentifier.cs" />
     <Compile Include="EnumOperators.T1.cs" />
     <Compile Include="Identifier.cs" />
@@ -92,7 +102,7 @@
     <Compile Include="Constraints\IErrorMessage.cs" />
     <Compile Include="Constraints\IErrorMessageReader.cs" />
     <Compile Include="Constraints\IErrorMessageWriter.T1.cs" />
-    <Compile Include="Constraints\IMemberConstraint.T2.cs" />
+    <Compile Include="Constraints\IMemberConstraintBuilder.T2.cs" />
     <Compile Include="Constraints\InputToOutputMapper.T1.cs" />
     <Compile Include="Constraints\BasicConstraints.IsEqualTo.cs" />
     <Compile Include="Constraints\BasicConstraints.IsGreaterThan.cs" />
@@ -100,7 +110,6 @@
     <Compile Include="Constraints\BasicConstraints.IsNull.cs" />
     <Compile Include="Constraints\BasicConstraints.IsSameInstanceAs.cs" />
     <Compile Include="Constraints\BasicConstraints.IsSmallerThan.cs" />
-    <Compile Include="Constraints\MemberWithValue.cs" />
     <Compile Include="Constraints\MemberConstraintEventArgs.T1.cs" />
     <Compile Include="Constraints\ConstraintInverter.T1.cs" />
     <Compile Include="Constraints\NullConstraint.T1.cs" />
@@ -126,15 +135,15 @@
     <Compile Include="StringTemplateComponent.cs" />
     <Compile Include="StringTemplateLiteral.cs" />
     <Compile Include="StringTemplateVariable.cs" />
-    <Compile Include="Constraints\IMemberConstraint.T1.cs" />
-    <Compile Include="Constraints\Member.T2.cs" />
+    <Compile Include="Constraints\IMemberConstraintBuilder.T1.cs" />
+    <Compile Include="Constraints\MemberFactory.T2.cs" />
     <Compile Include="Constraints\BasicConstraints.IsInRange.cs" />
     <Compile Include="Constraints\BooleanConstraints.cs" />
     <Compile Include="Constraints\ConstraintValidator.T1.cs" />
     <Compile Include="Constraints\GuidConstraints.cs" />
     <Compile Include="Constraints\IMemberConstraintSet.T1.cs" />
     <Compile Include="Constraints\IMember.cs" />
-    <Compile Include="Constraints\MemberConstraint.T3.cs" />
+    <Compile Include="Constraints\MemberConstraintBuilder.T3.cs" />
     <Compile Include="Constraints\MemberConstraintSet.T1.cs" />
     <Compile Include="Constraints\NullableConstraints.cs" />
     <Compile Include="Constraints\StringConstraints.IsNumber.cs" />
