Refactored and further implemented Expression Decoding features.

--- a/Framework/BuildingBlocks/02.BuildingBlocks.csproj
+++ b/Framework/BuildingBlocks/02.BuildingBlocks.csproj
@@ -52,15 +52,22 @@
     <Compile Include="Clocks\ClockExtensions.cs" />
     <Compile Include="Clocks\ClockScope.cs" />
     <Compile Include="Clocks\ShiftedClock.cs" />
+    <Compile Include="Constraints\Decoders\AndCallAppender.T2.cs" />
+    <Compile Include="Constraints\Decoders\AndExpressionDecoder.T3.cs" />
     <Compile Include="Constraints\AndMemberConstraint.T3.cs" />
+    <Compile Include="Constraints\Decoders\ExpressionBuilder.T2.cs" />
+    <Compile Include="Constraints\Decoders\LeftExpressionBuilder.T2.cs" />
+    <Compile Include="Constraints\Decoders\LengthCallAppender.T2.cs" />
     <Compile Include="Constraints\BasicConstraints.cs" />
     <Compile Include="Constraints\CollectionConstraints.IsNullOrEmpty.cs" />
     <Compile Include="Constraints\CollectionConstraints.HasItem.cs" />
+    <Compile Include="Constraints\Decoders\CompositeAppender.T2.cs" />
     <Compile Include="Constraints\ConstraintVisitor.cs" />
     <Compile Include="Constraints\ConstraintWrapper.T1.cs" />
     <Compile Include="Constraints\DefaultMember.cs" />
     <Compile Include="Constraints\DelegateConstraint.T1.cs" />
-    <Compile Include="Constraints\DelegateFilter.T2.cs" />
+    <Compile Include="Constraints\DelegateFilter.T3.cs" />
+    <Compile Include="Constraints\Decoders\HasItemCallAppender.T2.cs" />
     <Compile Include="Constraints\IndexerInvocationException.cs" />
     <Compile Include="Constraints\IndexListFactory.T1.cs" />
     <Compile Include="Constraints\EmptyStack.cs" />
@@ -73,15 +80,17 @@
     <Compile Include="Constraints\IMemberConstraint.T2.cs" />
     <Compile Include="Constraints\IndexList.cs" />
     <Compile Include="Constraints\IndexListComponent.cs" />
+    <Compile Include="Constraints\Decoders\MethodCallExpressionBuilder.T2.cs" />
+    <Compile Include="Constraints\Decoders\MethodCallExpressionFactory.T2.cs" />
     <Compile Include="Constraints\Member.cs" />
     <Compile Include="Constraints\Member.T1.cs" />
     <Compile Include="Constraints\MemberConstraint.T2.cs" />
-    <Compile Include="Constraints\MemberExpressionLeftNode.cs" />
-    <Compile Include="Constraints\MemberExpressionPairNode.cs" />
-    <Compile Include="Constraints\MemberExpressionRightNode.cs" />
-    <Compile Include="Constraints\VerifyThatExpression.T2.cs" />
+    <Compile Include="Constraints\Decoders\MemberExpressionDecoder.T2.cs" />
+    <Compile Include="Constraints\Decoders\MethodCallDecorator.T2.cs" />
+    <Compile Include="Constraints\Decoders\NullAppender.T2.cs" />
+    <Compile Include="Constraints\Decoders\RightExpressionBuilder.T2.cs" />
+    <Compile Include="Constraints\Decoders\VerifyThatExpressionDecoder.T2.cs" />
     <Compile Include="Constraints\MemberExceptionFactory.cs" />
-    <Compile Include="Constraints\MemberExpressionPair.cs" />
     <Compile Include="Constraints\MemberNameComponentStack.cs" />
     <Compile Include="Constraints\MemberTransformer.cs" />
     <Compile Include="Constraints\PushIdentifierTransformer.cs" />
